--- a/app/src/main/res/values/location_resource.xml
+++ b/app/src/main/res/values/location_resource.xml
@@ -76,7 +76,7 @@
         <item>Kairpur</item>
         <item>Khahi</item>
         <item>Khairpur Mirs</item>
-        <item>Khairpur Nathanshah</item>
+        <item>Khairpur Nathan Shah</item>
         <item>Khanpur</item>
         <item>Kharo Chan</item>
         <item>Khipro</item>
