--- a/app/src/main/res/layout/layout_search_item_view.xml
+++ b/app/src/main/res/layout/layout_search_item_view.xml
@@ -5,31 +5,29 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         >
-
 
         <ImageView
             android:id="@+id/layoutSearchItemsImageView"
             android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_height="130dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             android:background="@color/colorPrimary"
-            android:scaleType="fitXY"
-            />
+            android:scaleType="fitXY" />
+
         <TextView
             android:id="@+id/layoutSearchItemsProductNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product Name"
-            android:layout_toEndOf="@id/layoutSearchItemsImageView"
-            android:layout_marginTop="48dp"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:layout_marginStart="8dp"
-            />
+            android:layout_marginTop="24dp"
+            android:layout_toEndOf="@id/layoutSearchItemsImageView"
+            android:text="Product Name"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/layoutSearchItemsProductCategoryTextView"
@@ -39,7 +37,7 @@
             android:layout_toEndOf="@id/layoutSearchItemsImageView"
             android:layout_below="@id/layoutSearchItemsProductNameTextView"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginStart="8dp"
             />
 
@@ -51,7 +49,7 @@
             android:layout_toEndOf="@id/layoutSearchItemsImageView"
             android:layout_below="@id/layoutSearchItemsProductCategoryTextView"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginStart="8dp"
             />
         <TextView
@@ -62,29 +60,30 @@
             android:layout_toEndOf="@id/layoutSearchItemsProductQuantityTextView"
             android:layout_below="@id/layoutSearchItemsProductCategoryTextView"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginStart="8dp"
             />
 
         <TextView
             android:id="@+id/layoutSearchItemsProductPriceTextView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/layoutSearchItemsProductQuantityUnitTextView"
             android:layout_marginStart="8dp"
             android:layout_toEndOf="@id/layoutSearchItemsImageView"
             android:text="120"
             android:textColor="@color/colorRed"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/layoutSearchItemsProductLocationTextView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@id/layoutSearchItemsProductQuantityUnitTextView"
-            android:layout_alignParentEnd="true"
-            android:text="Location"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layoutSearchItemsProductPriceTextView"
             android:layout_marginEnd="16dp"
-            android:textSize="20sp" />
+            android:layout_toEndOf="@id/layoutSearchItemsImageView"
+            android:text="Location"
+            android:textSize="18sp" />
 
 
 
